--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
     "element-ui": "^2.4.5",
+    "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
