--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@amap/amap-vue": "^2.0.13",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "default-passive-events": "^2.0.0",
     "echarts": "^5.0.2",
     "element-ui": "^2.4.5",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
+    "vant": "^2.12.28",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -27,6 +30,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
